# OMPTSyntaxHighlight

./: OMPTSyntaxHighlight.sln
OMPTSyntaxHighlight/: CMakeLists.txt  OMPTSyntaxHighlight.vcxproj  Source.cpp
